--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="Pythonlogo.png" alt="" /></span><span class="title">Python</span>
+									<span class="symbol"><img src="Pythonlogo.svg.png" alt="" /></span><span class="title">Python</span>
 								</a>
 
 							<!-- Nav -->
@@ -60,8 +60,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>L01</h2>
+									<a href="Profile.html">
+										<h2>Profile</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
