--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="Profile.html">
 										<h2>Profile</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Aektawan Phutthamongkhol 6506022620133</p>
 										</div>
 									</a>
 								</article>
@@ -72,9 +72,12 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>L01</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>- Computer and Programming</p>
+											<p>- Program Design and IPO (Input Process Output)</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
