--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@
 											<p>What You Will Learn</p>
 											<p>- Computer and Programming</p>
 											<p>- Program Design and IPO (Input Process Output)</p>
-											<p></p>
+											<p>- Variable ,Data Type</p>
+											<p>Python ,Boolean ,String</p>
+											<p>Python Operators</p>
+											<p>Input</p>
+											<p>Comments</p>
 										</div>
 									</a>
 								</article>
