--- a/index.html
+++ b/index.html
@@ -71,17 +71,11 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="L01.html">
 										<h2>L01</h2>
 										<div class="content">
 											<p>What You Will Learn</p>
-											<p>- Computer and Programming</p>
-											<p>- Program Design and IPO (Input Process Output)</p>
-											<p>- Variable ,Data Type</p>
-											<p>Python ,Boolean ,String</p>
-											<p>Python Operators</p>
-											<p>Input</p>
-											<p>Comments</p>
+											<p>DATA TYPE, VARIABLES AND EXRESSION</p>
 										</div>
 									</a>
 								</article>
@@ -89,10 +83,11 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="L02.html">
+										<h2>L02</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>IF-ELIF-ELSE DRAW.IO</p>
 										</div>
 									</a>
 								</article>
@@ -100,10 +95,11 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="L03.html">
+										<h2>L03</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>REPETITION WHILE FOR</p>
 										</div>
 									</a>
 								</article>
