--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="L04.html">
+										<h2>L04</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>String</p>
 										</div>
 									</a>
 								</article>
@@ -118,10 +119,11 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="L05.html">
+										<h2>L05</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>FUNCTIONS</p>
 										</div>
 									</a>
 								</article>
@@ -129,10 +131,11 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="L06.html">
+										<h2>L06</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>FILE AND EXCEPTIONS</p>
 										</div>
 									</a>
 								</article>
@@ -140,10 +143,11 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
+									<a href="L07.html">
+										<h2>L07</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What You Will Learn</p>
+											<p>LIST AND TUPLES</p>
 										</div>
 									</a>
 								</article>
