--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<header>
 								<h1>Computer <br />
 								Programming</a></h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<p>Computer programming is the process of writing code to facilitate specific actions in a computer, application or software program, and instructs them on how to perform.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
