--- a/index(sub).html
+++ b/index(sub).html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Computer Programming</title>
+		<title>Phantom by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/pythonlogo.png" alt="" /></span><span class="title">Python</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
 								</a>
 
 							<!-- Nav -->
@@ -51,19 +51,19 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Computer <br />
-								Programming</a></h1>
-								<p>Computer programming is the process of writing code to facilitate specific actions in a computer, application or software program, and instructs them on how to perform.</p>
+								<h1>This is Phantom, a free, fully responsive site<br />
+								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="Profile.html">
-										<h2>Profile</h2>
+									<a href="generic.html">
+										<h2>Magna</h2>
 										<div class="content">
-											<p>Aektawan Phutthamongkhol 6506022620133</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -71,11 +71,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="L01.html">
-										<h2>L01</h2>
+									<a href="generic.html">
+										<h2>Lorem</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>DATA TYPE, VARIABLES AND EXRESSION</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -83,11 +82,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="L02.html">
-										<h2>L02</h2>
+									<a href="generic.html">
+										<h2>Feugiat</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>IF-ELIF-ELSE DRAW.IO</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -95,11 +93,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="L03.html">
-										<h2>L03</h2>
+									<a href="generic.html">
+										<h2>Tempus</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>REPETITION WHILE FOR</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -107,11 +104,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="L04.html">
-										<h2>L04</h2>
+									<a href="generic.html">
+										<h2>Aliquam</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>String</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -119,11 +115,10 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="L05.html">
-										<h2>L05</h2>
+									<a href="generic.html">
+										<h2>Veroeros</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>FUNCTIONS</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -131,11 +126,10 @@
 									<span class="image">
 										<img src="images/pic07.jpg" alt="" />
 									</span>
-									<a href="L06.html">
-										<h2>L06</h2>
+									<a href="generic.html">
+										<h2>Ipsum</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>FILE AND EXCEPTIONS</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -143,11 +137,10 @@
 									<span class="image">
 										<img src="images/pic08.jpg" alt="" />
 									</span>
-									<a href="L07.html">
-										<h2>L07</h2>
+									<a href="generic.html">
+										<h2>Dolor</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>LIST AND TUPLES</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
@@ -155,15 +148,46 @@
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
-									<a href="L08.html">
-										<h2>L08</h2>
+									<a href="generic.html">
+										<h2>Nullam</h2>
 										<div class="content">
-											<p>What You Will Learn</p>
-											<p>DICTIONARY AND SET</p>
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
 								</article>
-								
+								<article class="style5">
+									<span class="image">
+										<img src="images/pic10.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Ultricies</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style6">
+									<span class="image">
+										<img src="images/pic11.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Dictum</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/pic12.jpg" alt="" />
+									</span>
+									<a href="generic.html">
+										<h2>Pretium</h2>
+										<div class="content">
+											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
