--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
+									<a href="L00.html">
+										<h2>L00</h2>
+										<div class="content">
+											<p>What You Will Learn</p>
+											<p>INTRODUCTION</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/pic02.jpg" alt="" />
+									</span>
 									<a href="L01.html">
 										<h2>L01</h2>
 										<div class="content">
