--- a/L00.html
+++ b/L00.html
@@ -66,6 +66,8 @@
                             <p>Python so than nearly any other programming language, Python reads and writes very similarly to standard English. It uses a simplified syntax with an emphasis on natural language, for a much easier learning curve for beginners. And, because Python is free to use and is supported by an extremely large ecosystem of libraries and packages, it’s often the first-choice language for new developers. These and other factors help demonstrate why Python is the best choice for those without proper coding experience.</p>
 							<p>2. Python has an active, supportive community</p>
 							<p>At the same time, the Python community is extremely active. When developers are up against deadlines and in desperate need of help, they can work with the community to crowdsource fast, effective solutions.</p>
+                            <p>3. Python is flexible</p>
+                            <p>Python is often described as a general-purpose programming language. This means that unlike domain-specific languages which are designed only for certain application types, Python may be used to develop nearly any kind of application in any industry or field.</p>
 						</div>
 					</div>
 				<!-- Footer -->
