--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Computer <br />
-								Programming</a></h1>
+								<h1>Computer Programming<br />
+								</a></h1>
 								<p>Computer programming is the process of writing code to facilitate specific actions in a computer, application or software program, and instructs them on how to perform.</p>
 							</header>
 							<section class="tiles">
