--- a/L00.html
+++ b/L00.html
@@ -69,15 +69,15 @@
                             <p>3. Python is flexible</p>
                             <p>Python is often described as a general-purpose programming language. This means that unlike domain-specific languages which are designed only for certain application types, Python may be used to develop nearly any kind of application in any industry or field.</p>
 						</div>
+					</div>
                     <div id="main">
-                        <div class="inner">
-                            <h1>INTRODUCTION</h1>
-                            <span class="image main"><img src="images/python1.jpg" alt="" /></span>
-                            <h2><p>Python</p></h2>
-                            <p>Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentation. Python consistently ranks as one of the most popular programming languages.</p>
-                            <p>Python is dynamically-typed and garbage-collected. It supports multiple programming paradigms, including structured (particularly procedural), object-oriented and functional programming. It is often described as a "batteries included" language due to its comprehensive standard library.it.</p>
-                            <p>Guido van Rossum began working on Python in the late 1980s as a successor to the ABC programming language and first released it in 1991 as Python 0.9.0. Python 2.0 was released in 2000 and introduced new features such as list comprehensions, cycle-detecting garbage collection, reference counting, and Unicode support. Python 3.0, released in 2008, was a major revision that is not completely backward-compatible with earlier versions. Python 2 was discontinued with version 2.7.18 in 2020.</p>
-                        </div>
+						<div class="inner">
+                            <h2><p>INSTALL PYTHON</p></h2>
+                            <span class="image main"><img src="images/L00graph.jpg" alt="" /></span>
+                            <a href="Python.org">Python Install</a>
+							<p>1. Python is easy to learn</p>
+
+						</div>
 					</div>
 				<!-- Footer -->
 					<footer id="footer">
