--- a/L00.html
+++ b/L00.html
@@ -73,8 +73,9 @@
                     <div id="main">
 						<div class="inner">
                             <h2><p>INSTALL PYTHON</p></h2>
+                            <h2><p>1.</p></h2>
                             <span class="image main"><img src="images/L00graph.jpg" alt="" /></span>
-                            <a href="Python.org">Python Install</a>
+                            <a href="http://www.python.org">Python Install</a>
 							<p>1. Python is easy to learn</p>
 
 						</div>
