--- a/L00.html
+++ b/L00.html
@@ -74,9 +74,10 @@
 						<div class="inner">
                             <h2><p>INSTALL PYTHON</p></h2>
                             <h2><p>1.</p></h2>
-                            <span class="image main"><img src="images/L00graph.jpg" alt="" /></span>
+                            <span class="image main"><img src="images/L00installpython.png" alt="" /></span>
                             <a href="http://www.python.org">Python Install</a>
-							<p>1. Python is easy to learn</p>
+							<h2><p>2.</p></h2>
+                            <span class="image main"><img src="images/L00installpython2.png" alt="" /></span>
 
 						</div>
 					</div>
