--- a/L00.html
+++ b/L00.html
@@ -96,7 +96,41 @@
 								On November 18, 2015, the source of Visual Studio Code was released under the MIT License, and made available on GitHub. Extension support was also announced. On April 14, 2016, Visual Studio Code graduated from the public preview stage and was released to the Web. Microsoft has released most of Visual Studio Code's source code on GitHub under the permissive MIT License, while the releases by Microsoft are proprietary freeware.</p>
 							<h2><p>INSTALl VISUAL STUDIO CODE</p></h2>
 							<a href="https://code.visualstudio.com/">Visual Studio Code Install</a>
-							<span class="image main"><img src="images/L00installpython.png" alt="" /></span>
+							<h2><p>1. Select Operating System</p></h2>
+							<span class="image main"><img src="images/L00vscode2n.png" alt="" /></span>
+						</div>
+					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>GITHUB</p></h2>
+                            <span class="image main"><img src="images/GitHub-Logo.png" alt="" /></span>
+							<p>GitHub is an Internet hosting service for software development and version control using Git. It provides the distributed version control of Git plus access control, bug tracking, software feature requests, task management, continuous integration, and wikis for every project.[5] Headquartered in California, it has been a subsidiary of Microsoft since 2018.[6]
+								It is commonly used to host open source software development projects. As of June 2022, GitHub reported having over 83 million developers and more than 200 million repositories, including at least 28 million public repositories. It is the largest source code host as of November 2021.</p>
+							<h2><p>HISTORY</p></h2>
+							<p>Development of the GitHub.com platform began on October 19, 2007. The site was launched in April 2008 by Tom Preston-Werner, Chris Wanstrath, P. J. Hyett and Scott Chacon after it had been made available for a few months prior as a beta release. GitHub has an annual keynote called GitHub Universe.</p>
+							<h2><p>WHY GITHUB</p></h2>
+							<p>You Can</p>
+							<ul><p><li>Create and use a repository</li> <br>
+								<li>Start and manage a new branch</li><br>
+								<li>Make changes to a file and push them to GitHub as commits</li><br>
+								<li>Open and merge a pull request</li><br></p></ul>
+							<h2><p>GITHUB</p></h2>
+							<a href="https://github.com/">Sign in & Sign up GitHub</a>
+							<h2><p>1. Select Sign in & Sign up</p></h2>
+							<span class="image main"><img src="images/githubsign.png" alt="" /></span>
+							<p>If you don't have an account, select Sign up. Then complete the information.</p>
+							<span class="image main"><img src="images/githubsingup.png" alt="" /></span>
+							<p>If you have an account, and want to clone your repositories on vs code<br>
+							<ul><li>1. Choose your repositories on github</li><br>
+								<span class="image main"><img src="images/githubclone.png" alt="" /></span>
+								<li>2. Copy your HTTPS</li><br>
+								<span class="image main"><img src="images/githubclone2.png" alt="" /></span>
+								<span class="image main"><img src="images/githubclone3.png" alt="" /></span>
+								<li>3. C + SHIFT + P on Visual Studio Code, Select Git: Clone</li><br>
+								<span class="image main"><img src="images/githubclone4.png" alt="" /></span>
+								<li>4. Paste your HTTPS from Github</li>
+								<li>5. Choose where to put a folder</li><br>
+							</ul></p>
 						</div>
 					</div>
 				<!-- Footer -->
