--- a/L00.html
+++ b/L00.html
@@ -133,6 +133,14 @@
 							</ul></p>
 						</div>
 					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>Python Print String</p></h2>
+                            <span class="image main"><img src="images/hello.png" alt="" /></span>
+							<p>Basic Print String Python will use code *** print ('message') or print ("message") ***<br>
+
+						</div>
+					</div>
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
