--- a/L00.html
+++ b/L00.html
@@ -136,8 +136,11 @@
 					<div id="main">
 						<div class="inner">
                             <h2><p>Python Print String</p></h2>
-                            <span class="image main"><img src="images/hello.png" alt="" /></span>
 							<p>Basic Print String Python will use code *** print ('message') or print ("message") ***<br>
+                            <span class="image main"><img src="images/hello.png" alt="" /></span>
+							<p>If you want your message to contain a single quote, use a double quote to cover the text.<br>
+								And If you want your message to contain a double quote, use a single quote to cover the text.</p>
+							<span class="image main"><img src="images/printstr.png" alt="" /></span>
 
 						</div>
 					</div>
