--- a/L00.html
+++ b/L00.html
@@ -132,7 +132,7 @@
 								<span class="image main"><img src="images/githubclone.png" alt="" /></span>
 								<li>2. Copy your HTTPS</li><br>
 								<span class="image main"><img src="images/githubclone2.png" alt="" /></span>
-								<span class="image main"><img src="images/githubclone3.png" alt="" /></span>
+								<span class="image main"><img src="images/githubclone3.png" alt="" width= "600" height="500" /></span>
 								<li>3. C + SHIFT + P on Visual Studio Code, Select Git: Clone</li><br>
 								<span class="image main"><img src="images/githubclone4.png" alt="" /></span>
 								<li>4. Paste your HTTPS from Github</li>
