--- a/L00.html
+++ b/L00.html
@@ -131,10 +131,10 @@
 							<ul><li>1. Choose your repositories on github</li><br>
 								<span class="image main"><img src="images/githubclone.png" alt="" /></span>
 								<li>2. Copy your HTTPS</li><br>
-								<span class="image main"><img src="images/githubclone2.png" alt="" /></span>
-								<span class="image main"><img src="images/githubclone3.png" alt="" width= "600" height="500" /></span>
+								<img src="images/githubclone2.png" alt="" /></span>
+								<img src="images/githubclone3.png" alt="" width= "2000" height="1000" />
 								<li>3. C + SHIFT + P on Visual Studio Code, Select Git: Clone</li><br>
-								<span class="image main"><img src="images/githubclone4.png" alt="" /></span>
+								<span class="image main"></span><img src="images/githubclone4.png" alt="" /></span>
 								<li>4. Paste your HTTPS from Github</li>
 								<li>5. Choose where to put a folder</li><br>
 							</ul></p>
