--- a/L00.html
+++ b/L00.html
@@ -148,7 +148,49 @@
 							<p>If you want your message to contain a single quote, use a double quote to cover the text.<br>
 								And If you want your message to contain a double quote, use a single quote to cover the text.</p>
 							<span class="image main"><img src="images/printstr.png" alt="" /></span>
+							<p>1. If you want two messages to be in the same sentence, use a backslash at the end of the text.<br>
+							2. If you want your text to have a backslash, add one additional backslash to the end.<br>
+							3. *** \t it's mean output gonna show 1tab *** *** \n it's mean output gonna show newtab</p>
+							<span class="image main"><img src="images/printstr2.png" alt="" /></span>
+							<p>If you want to print multiple line the use '''...'''</p>
+							<span class="image main"><img src="images/printstr3.png" alt="" /></span>
 
+						</div>
+					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>Python Print Numeric</p></h2>
+							<p>Basic Print Numeric looks like a Print String *** print('numeric') or print ("numeric") ***<br>
+							%d it's mean display an integer.<br>
+							%f it's mean display decimal numbers., Usually displays 6 decimal places.<br>
+							%.2f it's mean display two dicimal place.</p>
+                            <span class="image main"><img src="images/printnum.png" alt="" /></span>
+							<p>Example of using %f<br></p>
+							<span class="image main"><img src="images/printnum2.png" alt="" /></span>
+						</div>
+					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>Python Print String + Numeric</p></h2>
+							<p>Print String + Numeric It takes a comma, followed by a String or numeric. *** print('numeric',"string") or print ("8,'ABC', 96, 74, 'EFG'") ***<br></p>
+                            <span class="image main"><img src="images/printnum+str.png" alt="" /></span>
+							<p>Example of using Print String + Numeric<br>
+							*** str() it's mean The text inside the brackets will be String. ***</p>
+							<span class="image main"><img src="images/printnum+str2.png" alt="" /></span>
+						</div>
+					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>Python Print String + String</p></h2>
+							<p>Print String + String Use comma or + steps between messages. *** print('Hello',"How",'Are',"You") or print('Hello'+"How"+'Are'+"You") ***<br></p>
+                            <span class="image main"><img src="images/printstr+str.png" alt="" /></span>
+						</div>
+					</div>
+					<div id="main">
+						<div class="inner">
+                            <h2><p>Python Print Numeric + Numeric</p></h2>
+							<p>Print String + String Use comma steps between messages. *** print(8,9,10,11) ***<br></p>
+                            <span class="image main"><img src="images/printnum+num.png" alt="" /></span>
 						</div>
 					</div>
 				<!-- Footer -->
