--- a/L00.html
+++ b/L00.html
@@ -161,9 +161,9 @@
 						<div class="inner">
                             <h2><p>Python Print Numeric</p></h2>
 							<p>Basic Print Numeric looks like a Print String *** print('numeric') or print ("numeric") ***<br>
-							%d it's mean display an integer.<br>
-							%f it's mean display decimal numbers., Usually displays 6 decimal places.<br>
-							%.2f it's mean display two dicimal place.</p>
+							*** %d it's mean display an integer. ***<br>
+							*** %f it's mean display decimal numbers., Usually displays 6 decimal places. ***<br>
+							*** %.2f it's mean display two dicimal place. ***</p>
                             <span class="image main"><img src="images/printnum.png" alt="" /></span>
 							<p>Example of using %f<br></p>
 							<span class="image main"><img src="images/printnum2.png" alt="" /></span>
