--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 										<div class="content">
 											<p>What You Will Learn</p>
 											<p>INTRODUCTION</p>
+											<p>PYTHON BASIC PRINT</p>
 										</div>
 									</a>
 								</article>
