--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<a href="Profile.html">
 										<h2>Profile</h2>
 										<div class="content">
-											<p>Aektawan Phutthamongkhol 6506022620133</p>
+											<p>About Me</p>
 										</div>
 									</a>
 								</article>
