--- a/Profile.html
+++ b/Profile.html
@@ -59,10 +59,20 @@
 					<div id="main">
 						<div class="inner">
 							<h1>Profile</h1>
-							<img src="images/profile.jpg" alt="" width="390" height="500" />
-							<p>My name is Aektawan Phutthamongkhol<br>My Nickname is Nuea</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<img src="images/profile.jpg" alt="" width="390" height="500" /><br>
+							<br>
+							<h2><p>ABOUT ME<br></p></h2>
+							<ul><p><li><b>NAME : Aektawan Phutthamongkhol</b></li> <br>
+								<li><b>NICKNAME : Nuea</b></li> <br>
+								<li><b>AGE : 18</b></li><br>
+								<li><b>DATE OF BIRTH : 17 November 2003</b></li><br>
+								<li><b>HOMETOWN : SARABURI</b></li><br></ul>
+							<h2><p>CONTACT<br></p></h2>
+							<ul><li><b>FACEBOOK : <a href= "https://www.facebook.com/aektawan.14/" target="_blank" class=""><span class="label">Nuea Aektawan</span></a></li></b></li><br>
+								<li><b>INSTRAGRAM : <a href="https://www.instagram.com/a3ktawan/" target="_blank" class=""><span class="label">a3ktawan</span></a></li></b></li><br>
+								<li><b>EMAIL : s6506022620133@email.kmutnb.ac.th</b></li><br>
+								<li><b>PHONE NUMBER : 0982753716</b></li><br></ul>
+								
 						</div>
 					</div>
 
