--- a/L01.html
+++ b/L01.html
@@ -57,11 +57,35 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Generic Page</h1>
-							<span class="image main"><img src="images/pic13.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel venenatis mauris vehicula hendrerit.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1>Computer and Programming</h1>
+							<span class="image main"><img src="images/L01computer.png" alt="" /></span>
+							<h2>What Is Computer?</h2>
+							<p>A computer is an electronic machine that processes information—in other words, an information processor: it takes in raw information (or data) at one end, stores it until it's ready to work on it, chews and crunches it for a bit, then spits out the results at the other end. All these processes have a name. Taking in information is called input, storing information is better known as memory (or storage), chewing information is also known as processing, and spitting out results is called output.</p>
+							<h2>How Does a Computer Work?</h2>
+							<p>A computer processes the input to produce the desired output, but how does a machine outperform the human brain?
+								Conventional computers don't try to mimic the human brain. Instead, they run commands sequentially, with data constantly moving from input and memory to the device's processor. Neuromorphic computers, on the other hand, process data at the same time, making them faster, energy-efficient, and closer to the structure of the human brain.</p>
+								<p>Overall, a computer works in four steps:</p>
+								<ul><p><li><b>Input:</b> Input is the data before processing. It comes from the mouse, keyboard, microphone, and other external sensors.</li> <br>
+									<li><b>Storage:</b> The storage is how the computer retains input data. The hard drive is used for long-term and mass data storage while the data set for immediate processing is stored temporarily in the Random Access Memory (RAM).</li><br>
+									<li><b>Processing:</b> Processing is where input gets transformed into output. The computer's Central Processing Unit (CPU) is its brain. It's responsible for executing instructions and performing mathematical operations on the input data.</li><br>
+									<li><b>Output:</b> Output is the final result of data processing. It can be anything from images, video, or audio content, even the words you type using a keyboard. You can also receive the output through a printer or a projector instead of directly through your device.</li><br></p></ul>
+								<span class="image main"><img src="images/inputprocessoutput.png" alt="" /></span>
+							<h2>Software?</h2>
+							<p>Software is a set of computer programs and associated documentation and data.[1] This is in contrast to hardware, from which the system is built and which actually performs the work.</p>
+							<span class="image main"><img src="images/software.png" alt="" /></span>
+							<h3>System Software</h3>
+							<ul><p><li><b>Operating Systems:</b> Windows, Mac Os, Linux</li><br>
+								<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
+								<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
+							<h3>Application Software</h3>
+							<ul><p><li><b>Example:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
+							<h2>How Computer store data?</h2>
+							<p>All data stored on storage media – whether that’s hard disk drives (HDDs), solid state drives (SSDs), external hard drives, USB flash drives, SD cards etc – can be converted to a string of bits, otherwise known as binary digits. These binary digits have a value of 1 or 0, and the strings can make up photos, documents, audio and video. A byte is the most common unit of storage and is equal to 8 bits.<br></p>
+							<p>All data in a computer is stored as a number. For example, letters become numbers; the Complete Works of Shakespeare is around 1250 pages in print, contains 40 million bits, with one byte per letter, totalling five megabytes (5MB). Photographs are converted to a set of numbers that indicate the location, colour and brightness of each pixel. Whereas convention numbers use ten digits (0, 1, 2, 3, 4, 5, 6, 7, 8, 9), binary numbers use two digits to represent all possible values. The conventions numbers 0-8 translate into binary numbers as: 0, 1, 10, 11, 100, 101, 110, 111 and 1000. With binary numbers, any value can be stored as a series of items which are either true (1) or false (0).<br></p>
+							<p>Binary data is primarily stored on the hard disk drive (HDD). The device is made up of a spinning disk (or disks) with magnetic coatings and heads that can both read and write information in the form of magnetic patterns. In addition to hard disk drives, floppy disks and tapes also store data magnetically. Newer laptops, as well as mobile phones, tablets, USB flash drives and SD cards, use solid state (or flash) storage. With this storage medium, the binary numbers are instead stored as a series of electrical charges within the NAND flash chips. Because all data is made up of a string of binary numbers, just one number out of place can cause a file to become corrupt. <br></p>
+							<span class="image main"><img src="images/binary.jpg" alt="" /></span>	
+														
+								
 						</div>
 					</div>
 
