--- a/L01.html
+++ b/L01.html
@@ -78,7 +78,7 @@
 								<li><b>Utility Programs:</b> Compression, Virus scanners, Back up</li><br>
 								<li><b>Software Development:</b>Assemblers, Compilers, Interpreter</li><br></ul>
 							<h3>Application Software</h3>
-							<ul><p><li><b>Example:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
+							<ul><p><li><b>Example Application:</b> Microsoft word, PowerPoint, Excel, Photoshop</li><br></ul>
 							<h2>How Computer store data?</h2>
 							<p>All data stored on storage media – whether that’s hard disk drives (HDDs), solid state drives (SSDs), external hard drives, USB flash drives, SD cards etc – can be converted to a string of bits, otherwise known as binary digits. These binary digits have a value of 1 or 0, and the strings can make up photos, documents, audio and video. A byte is the most common unit of storage and is equal to 8 bits.<br></p>
 							<p>All data in a computer is stored as a number. For example, letters become numbers; the Complete Works of Shakespeare is around 1250 pages in print, contains 40 million bits, with one byte per letter, totalling five megabytes (5MB). Photographs are converted to a set of numbers that indicate the location, colour and brightness of each pixel. Whereas convention numbers use ten digits (0, 1, 2, 3, 4, 5, 6, 7, 8, 9), binary numbers use two digits to represent all possible values. The conventions numbers 0-8 translate into binary numbers as: 0, 1, 10, 11, 100, 101, 110, 111 and 1000. With binary numbers, any value can be stored as a series of items which are either true (1) or false (0).<br></p>
